# pick

./: .envrc  .gitignore  .plugin-versions  .tool-versions  Cargo.toml  LICENSE  Makefile  README.md  Taskfile.yml  test.options
.github/workflows/: build.yml  docs.yml  release.yml  rust.yml  test.yml
Formula/: pick.rb
examples/: interactive_bash.sh
src/: main.rs  notes
tests/: integration_test.sh
