[package]
name = "pick"
version = "0.2.0"
edition = "2021"

[dependencies]
libc = "0.2"

[dependencies.dialoguer]
version = "0.11.0"
features = ["fuzzy-select"]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
