[package]
name = "pick"
version = "0.5.2"
edition = "2021"

[profile.release]
opt-level = 3
overflow-checks = false
strip = "debuginfo"
panic = "abort"
incremental = false

[dependencies]
clap = "4.5.4"
libc = "0.2"
signal-hook = "0.3.17"

[dependencies.dialoguer]
version = "0.11.0"
features = ["fuzzy-select"]
